# python-long-weekends

./: .coveragerc  LICENSE  README.md  README.rst  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: test.yml
notebooks/: example.ipynb
src/long_weekends/: long_weekends.py
src/long_weekends/test/unit/: test_long_weekends.py
