[metadata]
name = python-long-weekends
version = 0.1.0
author = Giulia Savorgnan
author_email = giulia.savorgnan@gmail.com
description = Spot holiday "bridges" and long weekends
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/kryptonite0/python-long-weekends
project_urls =
    Bug Tracker = https://github.com/kryptonite0/python-long-weekends/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas >= 1.3.2

[options.packages.find]
where = src